now saving time for appointments

--- a/Templates/Doctor/sidebar.html
+++ b/Templates/Doctor/sidebar.html
@@ -19,6 +19,10 @@
 		<i class="material-icons">call</i>Create Session</a>
 </li>
 <li>
+	<a class="waves-effect" href="/doctor/times">
+		<i class="material-icons">timer</i>Change Timings</a>
+</li>
+<li>
 	<div class="divider"></div>
 </li>
 <li>
