now storing the days of the week

--- a/Templates/Doctor/sidebar.html
+++ b/Templates/Doctor/sidebar.html
@@ -19,7 +19,7 @@
 		<i class="material-icons">call</i>Create Session</a>
 </li>
 <li>
-	<a class="waves-effect" href="/doctor/times">
+	<a class="waves-effect" href="/doctor/timings">
 		<i class="material-icons">timer</i>Change Timings</a>
 </li>
 <li>
