now saving the timezone of the doctors,to forward and reverse time on the server side,also sked tape test

--- a/Templates/Doctor/time.html
+++ b/Templates/Doctor/time.html
@@ -170,7 +170,11 @@
 
 			var time = {
 				start: startTime,
-				end: endTime
+				end: endTime,
+				timeZone: Intl
+					.DateTimeFormat()
+					.resolvedOptions()
+					.timeZone
 			}
 			$("<input />")
 				.attr("type", "hidden")
