Added per session times

--- a/Templates/Doctor/time.html
+++ b/Templates/Doctor/time.html
@@ -75,6 +75,12 @@
 						<input name="end" type="text" class="timepicker" placeholder="End Time">
 					</div>
 				</div>
+				<div class="col s12">
+					<div class="input-field">
+						<input value="{{ persession }}" name="persession" id="persession" type="number" class="validate">
+						<label for="persession">Mins per session</label>
+					</div>
+				</div>
 				<div class="input-field col s12">
 					<center>
 						<button class="btn waves-effect waves-light light-blue darken-2" type="submit">Apply Changes
