--- a/Templates/Customer/navbar.html
+++ b/Templates/Customer/navbar.html
@@ -66,7 +66,7 @@
 						</a>
 					</li>
 				</ul> #}
-			<form class="left" action="" method="get">
+			<form class="left" action="/customer/search" method="get">
 				<div class="input-field">
 					<input id="search" type="search" name="q" placeholder="Search Here">
 					<label class="label-icon" for="search">
