Doctor now can see when he's booked

--- a/Templates/Customer/book.html
+++ b/Templates/Customer/book.html
@@ -44,7 +44,7 @@
 				</div>
 				<form id="booking" class="row" style="display:none;" method="POST">
 					<div  class="col s12 m10" >
-						<h5 id="bookingData" class"col s12 m2">OOO</h5>
+						<h5 id="bookingData" class=col s12 m2">OOO</h5>
 					</div>
 					<div  class="col s12 m2">
 						<center>
