--- a/Templates/Doctor/sidebar.html
+++ b/Templates/Doctor/sidebar.html
@@ -23,6 +23,10 @@
 		<i class="material-icons">timer</i>Change Timings</a>
 </li>
 <li>
+	<a class="waves-effect" href="/doctor/bookings">
+		<i class="material-icons">timer</i>Bookings</a>
+</li>
+<li>
 	<div class="divider"></div>
 </li>
 <li>
