--- a/Templates/Doctor/call.html
+++ b/Templates/Doctor/call.html
@@ -59,7 +59,7 @@
 				.then(function (stream) {
 					connect();
 				})
-				.catch(function (err) {});
+				.catch(function (err) {console.error(err)});
 		}
 
 		checkAndConnect();
