--- a/Templates/Doctor/sidebar.html
+++ b/Templates/Doctor/sidebar.html
@@ -27,6 +27,10 @@
 		<i class="material-icons">timer</i>Bookings</a>
 </li>
 <li>
+	<a class="waves-effect" href="/doctor/all-bookings">
+		<i class="material-icons">timer</i>All Bookings</a>
+</li>
+<li>
 	<div class="divider"></div>
 </li>
 <li>
